--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
    global
 ========================================================================== */
 html, body {
-  font: 400 14px/1.6em RobotoDraft, Roboto, Arial, sans-serif;
+  font: 400 10px/1.846 RobotoDraft, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   overflow: hidden;
   text-rendering: optimizeLegibility; }
@@ -17,7 +17,7 @@ body {
     body .cf:after {
       clear: both; }
   body a {
-    color: inherit;
+    color: #0288d1;
     cursor: pointer;
     text-decoration: none; }
   body img {
@@ -56,16 +56,51 @@ body {
    typography
 ========================================================================== */
 .md-display-1 {
-  font-size: 34px;
+  color: #ff4081;
+  font-size: 3.4rem;
+  font-weight: 400; }
+  .md-display-1.numeral {
+    border-right: 2px solid #f48fb1;
+    font-weight: 300;
+    line-height: 1;
+    margin-right: 24px;
+    margin-top: 14px;
+    min-width: 40px;
+    text-align: left; }
+  .md-display-1 a {
+    color: inherit; }
+
+.md-headline {
+  font-size: 2.4rem;
   font-weight: 400; }
 
 .md-title {
-  font-size: 20px;
+  font-size: 2.0rem;
   font-weight: 500; }
 
 .md-subhead {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 500; }
+
+.md-body-1 {
+  font-size: 1.4rem;
+  font-weight: 400; }
+
+.md-body-2, .md-button {
+  font-size: 1.4rem;
+  font-weight: 500; }
+
+.md-button {
+  padding: 6px 16px; }
+  .md-button[md-no-ink] {
+    color: #0288d1;
+    padding: 0; }
+    .md-button[md-no-ink]:hover, .md-button[md-no-ink]:focus {
+      background: none !important; }
+
+.md-caption {
+  font-size: 1.2rem;
+  font-weight: 400; }
 
 /* ==========================================================================
    toolbar
@@ -73,8 +108,14 @@ body {
 md-toolbar .md-button {
   height: 64px;
   padding: 8px 24px; }
-md-toolbar h3 {
-  margin-left: 24px; }
+md-toolbar .md-subhead {
+  color: #fff;
+  font-weight: 400;
+  margin-left: 24px;
+  -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  -ms-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); }
 
 /* ==========================================================================
    navPanel
@@ -90,13 +131,110 @@ md-sidenav header {
   padding-left: 24px;
   position: relative;
   z-index: 1; }
+  md-sidenav header a {
+    color: #fff; }
 md-sidenav md-list {
   background: #f0f0f0 !important;
   display: block;
-  height: calc(100% - 64px); }
+  height: calc(100% - 64px);
+  padding-top: 24px; }
   md-sidenav md-list md-list-item a {
+    color: rgba(0, 0, 0, 0.87);
     display: block;
-    font-weight: 500;
     padding: 8px 24px; }
+
+/* ==========================================================================
+   general styling for main elements
+========================================================================== */
+article {
+  border-top: 1px solid rgba(0, 0, 0, 0.12); }
+  article:first-child {
+    border: none; }
+  article header {
+    margin: 8px 0;
+    max-width: 912px; }
+    article header .tags ng-md-icon {
+      fill: rgba(0, 0, 0, 0.26); }
+    article header .tags md-list-item {
+      background: #f0f0f0;
+      color: rgba(0, 0, 0, 0.54);
+      margin: 6px;
+      padding: 0 6px; }
+      article header .tags md-list-item:first-child {
+        background: none;
+        height: 24px;
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 0;
+        padding-right: 0; }
+  article section {
+    margin: 24px 0;
+    max-width: 912px; }
+    article section md-list {
+      display: block; }
+      article section md-list md-list-item {
+        display: block; }
+  article footer {
+    margin: 24px 0; }
+    article footer .links {
+      margin-bottom: 24px; }
+      article footer .links md-list-item {
+        border-right: 1px solid rgba(0, 0, 0, 0.12);
+        display: inline-block;
+        margin-right: 8px;
+        margin-top: 8px;
+        padding-right: 8px; }
+        article footer .links md-list-item:last-child {
+          border: none;
+          margin: 0;
+          padding: 0; }
+  article .block-color.accent {
+    background: #ff4081; }
+    article .block-color.accent .numeral {
+      border-color: #fff;
+      color: #fff; }
+  article .block-color.accent-1 {
+    background: #f48fb1; }
+  article .block-color.accent-2 {
+    background: #f8bbd0; }
+  article .block-color header {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    padding: 24px; }
+  article .block-color main {
+    padding: 0 24px 24px; }
+
+/* ==========================================================================
+   code
+========================================================================== */
+pre {
+  background: #f0f0f0;
+  color: #f48fb1;
+  font: 500 16px/1.6em 'Source Code Pro', monospace;
+  padding: 24px; }
+
+/* ==========================================================================
+   media queries
+========================================================================== */
+@media only screen and (max-width: 960px) {
+  md-toolbar .md-subhead {
+    margin: 0; } }
+@media only screen and (max-width: 600px) {
+  .right-side md-content[ng-view] {
+    padding: 16px; }
+
+  .md-subhead .md-button {
+    margin: 14px 0 0; }
+
+  pre {
+    padding: 16px; }
+
+  .md-display-1.numeral {
+    margin-right: 16px; }
+
+  article .block-color header {
+    padding: 16px; }
+
+  article .block-color main {
+    padding: 0 16px 16px; } }
 
 /*# sourceMappingURL=style.css.map */
